Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1732

Authproxy plugin doesn't compile on Solaris (or Illumos)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.1
    • Build, Plugins
    • None

    Description

      gmake[2]: Entering directory `/home/i.galic/src/trafficserver/plugins/experimental/authproxy'
        CXX      authproxy.lo
      authproxy.cc: In function 'TSEvent StateAuthProxyResolve(AuthRequestContext*, void*)':
      authproxy.cc:372:30: error: 'MAXHOSTNAMELEN' was not declared in this scope
      authproxy.cc:380:43: error: 'hostname' was not declared in this scope
      authproxy.cc: In function 'AuthOptions* AuthParseOptions(int, const char**)':
      authproxy.cc:715:5: error: deprecated conversion from string constant to 'char*' [-Werror=write-strings]
      authproxy.cc:715:5: error: deprecated conversion from string constant to 'char*' [-Werror=write-strings]
      authproxy.cc:715:5: error: deprecated conversion from string constant to 'char*' [-Werror=write-strings]
      authproxy.cc:715:5: error: deprecated conversion from string constant to 'char*' [-Werror=write-strings]
      cc1plus: all warnings being treated as errors
      gmake[2]: *** [authproxy.lo] Error 1
      

      Attachments

        Activity

          People

            i.galic Igor Galić
            i.galic Igor Galić
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: