TS-1732: use the same TS constant for hostnames

n.b.: This will not work out of tree right now, because we don't
install ink_config.h right now.